# france-budget-analysis

./: .gitignore  .replit  LICENSE  README.md  account_name.csv  account_name.json  account_name.txt  app.py  compare_files.py  config.py  convertCsvToJson.js  data_fetcher.py  generate_csv.js  predictor.py  pyproject.toml  requirements.txt  utils.py
.streamlit/: config.toml
